--- a/app/globals.css
+++ b/app/globals.css
@@ -26,7 +26,8 @@
 
     /* Community Card */
     .community-card {
-        @apply w-full rounded-lg bg-dark-3 px-4 py-5 sm:w-96;
+        /* @apply w-full rounded-lg bg-dark-3 px-4 py-5 sm:w-96; */
+        @apply w-full rounded-lg bg-dark-3 px-4 py-5 xl:w-[327px];
     }
 
     .community-card_btn {
@@ -35,11 +36,12 @@
 
     /* thread card  */
     .thread-card_bar {
-        @apply relative mt-2 w-0.5 grow rounded-full bg-neutral-800;
+        @apply relative my-2 w-0.5 grow rounded-full bg-neutral-800;
     }
 
     /* User card */
     .user-card {
+        /* @apply flex flex-col justify-between gap-4 max-xs:rounded-xl max-xs:bg-dark-3 max-xs:p-4 xs:flex-row xs:items-center; */
         @apply flex flex-col justify-between gap-4 max-xs:rounded-xl max-xs:bg-dark-3 max-xs:p-4 xs:flex-row xs:items-center;
     }
 
@@ -88,6 +90,7 @@
     }
 
     .rightsidebar {
+        /* @apply sticky right-0 top-0 z-20 flex h-screen w-fit flex-col justify-between gap-12 overflow-auto border-l border-l-dark-4 bg-dark-2 px-10 pb-6 pt-28 max-xl:hidden; */
         @apply sticky right-0 top-0 z-20 flex h-screen w-fit flex-col justify-between gap-12 overflow-auto border-l border-l-dark-4 bg-dark-2 px-10 pb-6 pt-28 max-xl:hidden;
     }
 }
@@ -152,7 +155,8 @@
 
 /* Comment Form */
 .comment-form {
-    @apply mt-10 flex items-center gap-4 border-y border-y-dark-4 py-5 max-xs:flex-col !important;
+    /* @apply mt-10 flex items-center gap-4 border-y border-y-dark-4 py-5 max-xs:flex-col !important; */
+    @apply flex items-center px-7 py-5 rounded-xl bg-dark-3 max-xs:flex-col !important;
 }
 
 .comment-form_btn {
